hydra/test/test_examples/type_errors/assignment2.tpc
tele bit<32> x;
init {
    x = false;
} 
telemetry {} 
check {}